--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ spacy
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
 rdflib
 plotly
-nbformat --upgrade
-ipywidgets --upgrade
+nbformat
+ipywidgets
 lxml
 sympy
 pygraphviz
