--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 kg-gen
 PyMuPDF
-spacy
+spacy==3.7.2
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
 rdflib
 plotly
