--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 kg-gen
 PyMuPDF
-spacy==3.7.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
+spacy>=3.0.0,<4.0.0
+https://...3.0.0...tar.gz#egg=en_core_web_sm
 rdflib
 plotly
 nbformat
