--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 kg-gen
 PyMuPDF
-spacy==3.5.0
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
+spacy==3.7.2
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz#egg=en_core_web_sm
+pydantic>=2.0
 rdflib
 plotly
 nbformat
