--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 kg-gen
 PyMuPDF
-spacy==3.7.2
+spacy-nightly>=3.7.0.dev0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz#egg=en_core_web_sm
 pydantic>=2.0
 rdflib
