--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 kg-gen
 PyMuPDF
 spacy-nightly>=3.7.0.dev0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz#egg=en_core_web_sm
-pydantic>=2.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz#egg=en_core_web_sm
 rdflib
 plotly
 nbformat
@@ -14,5 +13,4 @@ streamlit
 networkx
 streamlit-plotly-events
 matplotlib
-numpy
-
+numpy==1.24.4
