--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,219 @@
-kg-gen
-PyMuPDF
-spacy-nightly>=3.7.0.dev0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz#egg=en_core_web_sm
-rdflib
-plotly
-nbformat
-ipywidgets
-lxml
-sympy
-pygraphviz
-streamlit
-networkx
-streamlit-plotly-events
-matplotlib
-numpy==1.24.4
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+alembic==1.16.2
+altair==5.5.0
+altgraph==0.17.4
+anaconda-anon-usage @ file:///C:/b/abs_e8r_zga7xy/croot/anaconda-anon-usage_1732732454901/work
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+archspec @ file:///croot/archspec_1709217642129/work
+asttokens==3.0.0
+asyncer==0.0.8
+attrs==25.3.0
+backoff==2.2.1
+beautifulsoup4==4.13.4
+blinker==1.9.0
+blis==1.3.0
+boltons @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/boltons_1699480450092/work
+Brotli @ file:///C:/b/abs_3d36mno480/croot/brotli-split_1714483178642/work
+cachetools==6.1.0
+catalogue==2.0.10
+certifi @ file:///C:/b/abs_1fw_exq1si/croot/certifi_1725551736618/work/certifi
+cffi @ file:///C:/b/abs_90yq4lmu83/croot/cffi_1726856448345/work
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+click==8.2.1
+cloudpathlib==0.21.1
+cloudpickle==3.1.1
+colorama @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/colorama_1699472650914/work
+colorlog==6.9.0
+comm==0.2.2
+conda @ file:///C:/b/abs_3bs4tei4e9/croot/conda_1733841834375/work
+conda-anaconda-telemetry @ file:///C:/b/abs_b5wbfhyt0i/croot/conda-anaconda-telemetry_1733260551861/work
+conda-content-trust @ file:///C:/b/abs_bdfatn_wzf/croot/conda-content-trust_1714483201909/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1727775630457/work/src
+conda-package-handling @ file:///C:/b/abs_7fz3aferfv/croot/conda-package-handling_1731369038903/work
+conda_package_streaming @ file:///C:/b/abs_bdz9vbvbh2/croot/conda-package-streaming_1731366449946/work
+confection==0.1.5
+contourpy==1.3.1
+cryptography @ file:///C:/b/abs_e2lzchf4i6/croot/cryptography_1732130411942/work
+cycler==0.12.1
+cymem==2.0.11
+datasets==3.6.0
+debugpy==1.8.12
+decorator==5.2.1
+dill==0.3.8
+diskcache==5.6.3
+distro @ file:///C:/b/abs_71xr36ua5r/croot/distro_1714488282676/work
+dspy==2.6.24
+effdet==0.4.1
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.13.1
+fonttools==4.56.0
+frozendict @ file:///C:/b/abs_2alamqss6p/croot/frozendict_1713194885124/work
+frozenlist==1.7.0
+fsspec==2024.6.1
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.2.3
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.25.2
+huggingface-hub==0.33.0
+idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
+importlib_metadata==8.7.0
+iopath==0.1.10
+ipykernel==6.29.5
+ipython==8.32.0
+ipywidgets==8.1.7
+jedi==0.19.2
+Jinja2==3.1.4
+jiter==0.10.0
+joblib==1.4.2
+json_repair==0.46.2
+jsonpatch @ file:///C:/b/abs_4fdm88t7zi/croot/jsonpatch_1714483974578/work
+jsonpickle==4.1.1
+jsonpointer==2.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.15
+kg-gen==0.2.0
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+layoutparser==0.3.4
+libmambapy @ file:///C:/b/abs_7fjjcok9fe/croot/mamba-split_1732896315069/work/libmambapy
+litellm==1.63.7
+llmgraph==1.3.2
+loguru==0.7.3
+lxml==5.4.0
+magicattr==0.1.6
+Mako==1.3.10
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+menuinst @ file:///C:/b/abs_cabvzz4p7a/croot/menuinst_1731364936347/work
+mpmath==1.3.0
+multidict==6.5.0
+multiprocess==0.70.16
+murmurhash==1.0.13
+narwhals==1.43.1
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.1
+numpy==2.2.3
+omegaconf==2.3.0
+openai==1.61.0
+opencv-python==4.11.0.86
+optuna==4.4.0
+packaging @ file:///C:/b/abs_c3vlh0z4jw/croot/packaging_1720101866539/work
+pandas==2.2.3
+parso==0.8.4
+pdf2image==1.17.0
+pdfminer.six==20250506
+pdfplumber==0.11.7
+pefile==2023.2.7
+pillow==11.1.0
+platformdirs @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/platformdirs_1701797392447/work
+plotly==6.2.0
+pluggy @ file:///C:/b/abs_dfec_m79vo/croot/pluggy_1733170145382/work
+portalocker==3.2.0
+preshed==3.0.10
+prompt_toolkit==3.0.50
+propcache==0.3.2
+protobuf==6.31.1
+psutil==7.0.0
+pure_eval==0.2.3
+pyarrow==20.0.0
+pycocotools==2.0.10
+pycosat @ file:///C:/b/abs_5csdern___/croot/pycosat_1714513102923/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+pyinstaller==6.14.2
+pyinstaller-hooks-contrib==2025.6
+PyMuPDF==1.26.1
+pyparsing==3.2.1
+pypdfium2==4.30.1
+PySocks @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pysocks_1699473336188/work
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+pyvis==0.3.2
+pywin32==308
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+pyzmq==26.2.1
+rdflib==7.1.4
+referencing==0.36.2
+regex==2024.11.6
+requests @ file:///C:/b/abs_c3508vg8ez/croot/requests_1731000584867/work
+rich==13.9.4
+rpds-py==0.25.1
+ruamel.yaml @ file:///C:/b/abs_0cunwx_ww6/croot/ruamel.yaml_1727980181547/work
+ruamel.yaml.clib @ file:///C:/b/abs_5fk8zi6n09/croot/ruamel.yaml.clib_1727769837359/work
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==75.1.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+spacy_dbpedia_spotlight==0.2.6
+SPARQLWrapper==2.0.0
+SQLAlchemy==2.0.41
+srsly==2.5.1
+stack-data==0.6.3
+streamlit==1.46.1
+streamlit-plotly-events==0.0.6
+sympy==1.13.1
+tenacity==9.1.2
+thinc==8.3.6
+threadpoolctl==3.5.0
+tiktoken==0.9.0
+timm==1.0.15
+tokenizers==0.21.1
+toml==0.10.2
+torch==2.5.1+cu121
+torchvision==0.20.1+cu121
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+truststore @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/truststore_1701881385424/work
+typer==0.9.4
+typing_extensions==4.12.2
+tzdata==2025.1
+ujson==5.10.0
+urllib3 @ file:///C:/b/abs_9a_f8h_bn2/croot/urllib3_1727769836930/work
+wasabi==1.1.3
+watchdog==6.0.0
+wcwidth==0.2.13
+weasel==0.4.1
+wheel==0.44.0
+widgetsnbextension==4.0.14
+Wikipedia-API==0.8.1
+win-inet-pton @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/win_inet_pton_1699472992992/work
+win32_setctime==1.2.0
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.23.0
+zstandard @ file:///C:/b/abs_31t8xmrv_h/croot/zstandard_1731356578015/work
