--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,14 @@
-aiohttp==3.12.13
-altair==5.5.0
-annotated-types==0.7.0
-attrs==25.3.0
-blis==1.3.0
-catalogue==2.0.10
-cffi
-charset-normalizer
-click==8.2.1
-cloudpickle==3.1.1
-confection==0.1.5
-contourpy==1.3.1
-cryptography
-cycler==0.12.1
-cymem==2.0.11
-datasets==3.6.0
-dill==0.3.8
-diskcache==5.6.3
-effdet==0.4.1
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
-fonttools==4.56.0
-frozenlist==1.7.0
-fsspec==2024.6.1
-gitpython==3.1.44
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.25.2
-huggingface-hub==0.33.0
-ipykernel==6.29.5
-ipython==8.32.0
-ipywidgets==8.1.7
-jedi==0.19.2
-joblib==1.4.2
-jsonpickle==4.1.1
-jsonschema==4.24.0
-jupyterlab-widgets==3.0.15
 kg-gen==0.2.0
-kiwisolver==1.4.8
-langcodes==3.5.0
-layoutparser==0.3.4
-litellm==1.63.7
-llmgraph==1.3.2
-lxml==5.4.0
-markdown-it-py==3.0.0
-matplotlib==3.10.1
-mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.5.0
-multiprocess==0.70.16
-murmurhash==1.0.13
-nbformat==5.10.4
-networkx==3.5
-nltk==3.9.1
-numpy==2.2.3
-omegaconf==2.3.0
-openai==1.61.0
-packaging
-pandas==2.2.3
-parso==0.8.4
-pdf2image==1.17.0
-pdfminer.six==20250506
-pdfplumber==0.11.7
-pillow==11.1.0
-plotly==6.2.0
-preshed==3.0.10
-prompt_toolkit==3.0.50
-protobuf==6.31.1
-psutil==7.0.0
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.2
 PyMuPDF==1.26.1
-pyparsing==3.2.1
-pypdfium2==4.30.1
-pytesseract==0.3.13
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2025.1
-pyvis==0.3.2
-PyYAML==6.0.2
-pyzmq==26.2.1
-rdflib==7.1.4
-regex==2024.11.6
-requests
-rich==14.0.0
-scikit-learn==1.6.1
-scipy==1.15.2
 spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SPARQLWrapper==2.0.0
-srsly==2.5.1
-streamlit==1.46.1
-streamlit-plotly-events==0.0.6
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+rdflib==7.1.4
+plotly==6.2.0
+nbformat==5.10.4
+ipywidgets==8.1.7
+lxml==5.4.0
 sympy==1.13.1
-tenacity==9.1.2
-thinc==8.3.6
-tokenizers==0.21.1
-tqdm==4.67.1
-traitlets==5.14.3
-typer==0.9.4
-typing-extensions==4.14.1
-ujson==5.10.0
-urllib3
-wasabi==1.1.3
-watchdog==6.0.0
-wcwidth==0.2.13
-weasel==0.4.1
-widgetsnbextension==4.0.14
-Wikipedia-API==0.8.1
-yarl==1.20.1
-zipp==3.23.0
+pygraphviz  # You may need system-level `graphviz` installed for this to work
+streamlit==1.46.1
+networkx==3.5
+streamlit-plotly-events==0.0.6
