--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ nbformat==5.10.4
 ipywidgets==8.1.7
 lxml==5.4.0
 sympy==1.13.1
-pygraphviz  # You may need system-level `graphviz` installed for this to work
+pygraphviz  # requires system-level Graphviz installed
 streamlit==1.46.1
 networkx==3.5
 streamlit-plotly-events==0.0.6
+matplotlib==3.10.1
+numpy==2.2.3
